[package]
name = "acurast-p2p-node"
version = "0.1.0"
edition = "2021"

[features]
default = ["libp2p"]
libp2p = [
  "dep:libp2p",
  "dep:libp2p-request-response",
  "dep:rand",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-subscriber",
]

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
libp2p = { version = "0.54.1", features = ["tokio", "macros", "tcp", "quic", "dns", "websocket", "noise", "tls", "yamux", "mdns", "relay", "dcutr", "identify", "ping"], optional = true }
libp2p-request-response = { version = "0.27.0", optional = true }
rand = { version = "0.8.5", optional = true }
tokio = { version = "1.41.1", features = ["macros"], optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }

[dev-dependencies]
clap = { version = "4.5.21", features = ["derive"] }
nom = "7.1.3"
tokio = { version = "1.41.1", features = ["full"] }
