[package]
name = "acup2p"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "acup2p"

[features]
default = ["libp2p"]
libp2p = [
  "tokio",
  "dep:libp2p",
  "dep:libp2p-request-response",
  "dep:libp2p-stream",
  "dep:rand",
  "dep:tracing",
  "dep:tracing-subscriber",
]
tokio = ["dep:tokio", "uniffi/tokio"]

[dependencies]
async-trait = "0.1.86"
futures = "0.3.31"
libp2p = { git = "https://github.com/Acurast/rust-libp2p.git", branch = "websocket-custom-dns-config", features = ["tokio", "macros", "tcp", "quic", "dns", "websocket", "noise", "tls", "yamux", "mdns", "relay", "dcutr", "identify", "ping"], optional = true }
libp2p-request-response = { git = "https://github.com/Acurast/rust-libp2p.git", branch = "websocket-custom-dns-config", optional = true }
libp2p-stream = { git = "https://github.com/Acurast/rust-libp2p.git", branch = "websocket-custom-dns-config", optional = true }
rand = { version = "0.9.0", optional = true }
tokio = { version = "1.43.0", features = ["macros"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
uniffi = { version = "0.29.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }

[dev-dependencies]
clap = { version = "4.5.21", features = ["derive"] }
nom = "7.1.3"
tokio = { version = "1.43.0", features = ["full"] }

[[bin]]
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"
